@@ -24,3 +24,4 @@
     Removed support for Emacs 21
     Changed Emacs Version recommendations
 0.7 Move generation of a key from a password to a separate function
+    Allow usage of external password for buffer-en/de-cryption.
